# DA2023_PRJ2_G169

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: 2approximation_8h_source.html  FileReader_8h_source.html  Graph_8h_source.html  Menu_8h_source.html  MutablePriorityQueue_8h_source.html  NearestNeighbor_8h_source.html  RealWorld_8h_source.html  Timer_8h_source.html  annotated.html  backtraking_8h_source.html  classEdge-members.html  classEdge.html  classFileReader-members.html  classFileReader.html  classFileReader__coll__graph.map  classFileReader__coll__graph.md5  classGraph-members.html  classGraph.html  classMenu-members.html  classMenu.html  classMenu__coll__graph.map  classMenu__coll__graph.md5  classMutablePriorityQueue-members.html  classMutablePriorityQueue.html  classRealWorld-members.html  classRealWorld.html  classTimer-members.html  classTimer.html  classUnionFind-members.html  classUnionFind.html  classVertex-members.html  classVertex.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html
docs/latex/: annotated.tex  classEdge.tex  classFileReader.tex  classFileReader__coll__graph.md5  classGraph.tex  classMenu.tex  classMenu__coll__graph.md5  classMutablePriorityQueue.tex  classRealWorld.tex  classTimer.tex  (+3 more)
src/: 2approximation.h  FileReader.cpp  FileReader.h  Graph.h  Menu.cpp  Menu.h  NearestNeighbor.cpp  NearestNeighbor.h  RealWorld.cpp  RealWorld.h  SimAnneal.cpp  SimAnneal.h  Timer.cpp  Timer.h  backtraking.h  main.cpp
(+35 files in other folders)
